# liquid-cache-admin

./: Cargo.toml  README.md  flake.nix  tailwind.config.js
.cursor/rules/: overall.mdc
.github/workflows/: gh-pages-deploy.yml
src/: lib.rs  main.rs  utils.rs
src/components/: cache_info.rs  execution_plans.rs  flamegraph.rs  mod.rs  statistics.rs  system_info.rs  toast.rs
src/models/: execution_plan.rs
src/pages/: home.rs
