[package]
name = "liquid-cache-admin"
version = "0.1.0"
edition = "2021"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
send_wrapper = "0.6.0"
web-sys = "0.3"
uuid = { version = "1.0", features = ["v4", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", features = ["wasm-bindgen"] }


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
